fixed resizing of columns going off screen.

--- a/newHomeStyle.css
+++ b/newHomeStyle.css
@@ -92,18 +92,8 @@ nav ul li a:hover::after {
     border-radius: 1em;
 }
 
-.block1{
-    margin: 0;
-    padding: 0;
-}
-
-.block2{
-    margin: 0;
-    padding: 0;
-}
-
 .content1 {
-    height: 40em;
+    height: 700px;
     background-color: #403534;
     color: #F0E5E0; 
     display: flex;
@@ -111,19 +101,23 @@ nav ul li a:hover::after {
     justify-content: center;
     width: 95%;
     margin: auto;
-    padding: 2.5%
+    margin-bottom: 0;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
 }
 
 .content2{
-    height: 40em;
+    height: 700px;
     background-color: #210900;
     color: #F2D8CE; 
     display: flex;
     align-items: center;
     justify-content: center;
     width: 95%;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
     margin: auto;
-    padding: 2.5%
+    padding-bottom: 2.8em;
 }
 
 .blurb {
@@ -178,19 +172,28 @@ footer {
     border-right: .1em solid #F0E5E0;
 }
 
-
 .column{
+    display: flex;
     flex: 33.33%;
+    height: 90%;
+    margin: auto;
+    padding: 0;
     text-align: center;
-    font-size: 1.4em; 
+    font-family: Arvo, sans-serif;
+    font-size: 1.3em; 
     border: .1em solid #F0E5E0;
-    padding: 1.3em;
-    height: 80%
+}
+
+.column p{
+    padding-left: 4%;
+    padding-right: 4%;
 }
 
 
 .icon{
-    height: 10em;
+    height: 15em;
+    margin: 0;
+    padding: 0;
 }
 
 
